[MODORDERS-1109] - Add batch creation support for pieces and validation checks